--- a/AzureMVCWebSiteWithOAuth/Web.config
+++ b/AzureMVCWebSiteWithOAuth/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-AzureMVCWebSiteWithOAuth-20140117084816.mdf;Initial Catalog=aspnet-AzureMVCWebSiteWithOAuth-20140117084816;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=AzureRaceDataMembership;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="appdb" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=AzureRaceDataApi;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -21,7 +21,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
-    <customErrors mode="Off"/>
+    <customErrors mode="Off" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
@@ -45,7 +45,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
