--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\AzureMVCWebSiteWithOAuth\packages.config" />
+  <repository path="..\AzureRaceDataAPI.Tests\packages.config" />
+  <repository path="..\AzureRaceDataAPI\packages.config" />
+  <repository path="..\AzureRaceDataWepAPI\packages.config" />
+  <repository path="..\AzureSPAWithOAuth\packages.config" />
+  <repository path="..\Persistence\packages.config" />
 </repositories>
